Changses to statistics computation, new endpoint for northern Lapland stats, openApi doc changes.
