# src/main/domain/routers/birdAssociationRouter.js
@@ -3,6 +3,8 @@ const birdAssociationRouter = require('express').Router()
 const BirdAssociation = require('../controllers/birdAssociation')
 const birdAssociation = new BirdAssociation()
 
-birdAssociationRouter.get('/', birdAssociation.getAll() )
+birdAssociationRouter.get('/', birdAssociation.getAll())
+birdAssociationRouter.get('/:birdAssociationId/stats', birdAssociation.getStatsForId())
 birdAssociationRouter.get('/stats', birdAssociation.getStatsAll())
+birdAssociationRouter.get('/stats/lappi', birdAssociation.getStatsLappi())
 module.exports = birdAssociationRouter
